SUBDIRS = 			\
	data			\
	gnome-keyring-sharp	\
	xmlrpccs		\
	notify-sharp		\
	liblast-exit		\
	src			\
	po

EXTRA_DIST = mkinstalldirs 			\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in

DISTCLEANFILES =		\
	intltool-extract	\
	intltool-merge		\
	intltool-update

MAINTAINERCLEANFILES = \
	mkinstalldirs
